--- a/beranda.html
+++ b/beranda.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,49 +9,56 @@
   <link rel="stylesheet" href="./bootstrap-5.3.0-alpha3-dist/css/bootstrap.css">
   <link rel="stylesheet" href="branda.css">
 </head>
+
 <body>
   <!-- Navbar -->
   <div class="container">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <img src="Icon/Logo Tanya Dosen.png" class="img-fluid" alt="...">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
+            <li class="nav-item dropdown"></li>
           </ul>
           <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-masuk" type="submit">Masuk</button>
+            <a class="navbar-brand" href="#">Beranda</a>
+            <button class="btn btn-masuk" type="button">Masuk</button>
           </form>
         </div>
       </div>
     </nav>
   </div>
+  <!-- Navbar End -->
+
+  <!-- Homepage -->
+  <div class="homepage">
+    <div class="row">
+      <div class="col-6">
+        <p class="judulhp"><span style="color:#FB0303;">T</span>ANYA DOSEN</p>
+        <p class="isihp">Tanya dosen merupakan sebuah sistem yang dapat memudahkan mahasiswa untuk berkomunikasi dengan
+          dosen. Penerapan sistem ini juga di harapkan untuk dapat meminimalisir adanya chat dari mahasiswa yang
+          tertimbun karena banyaknya pesan yang masuk di WA dosen.</p>
+        <button type="button" class="btn btn-hp">Masuk</button>
+      </div>
+      <div class="col-5">
+        <img src="Icon/1.png" class="img-fluid rounded float-end me-5 imghp" alt="...">
+      </div>
+    </div>
+
+  </div>
+  <!-- Homepage End -->
+
+  <!-- Footer -->
+  <footer>
+    <p class="pfoot">Copyright Tanya Dosen 2023</p>
+    <p>Analisis Perancangan Sistem Informasi R4 Kelompok 3 </p>
+  </footer>
+  <!-- Footer End -->
   
-
   <script src="./bootstrap-5.3.0-alpha3-dist/js/bootstrap.bundle.js"></script>
-
 </body>
 </html>
