--- a/beranda.html
+++ b/beranda.html
@@ -26,7 +26,45 @@
           </ul>
           <form class="d-flex" role="search">
             <a class="navbar-brand" href="#">Beranda</a>
-            <button class="btn btn-masuk" type="button">Masuk</button>
+            <!-- modal -->
+            <button type="button" class="btn btn-modal" data-bs-toggle="modal" data-bs-target="#exampleModal"
+              data-bs-whatever="@mdo">Masuk</button>
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+              aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <div class="container d-flex justify-content-center">
+                      <h5 class="modal-title" id="exampleModalLabel">Masuk Ke Sistem</h5>
+                    </div>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <form>
+                      <div class="mb-3">
+                        <p class="text-center">Silakan masuk menggunakan Username dan password SIMPEG bagi pegawai dan
+                          SIAKAD bagi mahasiswa</p>
+                        <p class="text-center">Username</p>
+                        <div class="col-9 input_login">
+                          <input type="text" class="form-control" placeholder="NIM/NIP" id="recipient-name">
+                        </div>
+                      </div>
+                      <div class="mb-3">
+                        <p class="text-center">Password</p>
+                        <div class="col-9 input_login">
+                          <input type="text" class="form-control" placeholder="Masukkan Password" id="recipient-pw">
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="modal-footer d-flex justify-content-center">
+                    <button type="button" class="btn btn-modal">Masuk</button>
+                    <button type="button" class="btn btn-pinang" data-bs-dismiss="modal">Batal</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- modal -->
           </form>
         </div>
       </div>
@@ -42,7 +80,44 @@
         <p class="isihp">Tanya dosen merupakan sebuah sistem yang dapat memudahkan mahasiswa untuk berkomunikasi dengan
           dosen. Penerapan sistem ini juga di harapkan untuk dapat meminimalisir adanya chat dari mahasiswa yang
           tertimbun karena banyaknya pesan yang masuk di WA dosen.</p>
-        <button type="button" class="btn btn-hp">Masuk</button>
+        <!-- modal -->
+        <button type="button" class="btn btn-hp" data-bs-toggle="modal" data-bs-target="#exampleModal"
+          data-bs-whatever="@mdo">Masuk</button>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <div class="container d-flex justify-content-center">
+                  <h5 class="modal-title" id="exampleModalLabel">Masuk Ke Sistem</h5>
+                </div>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <form>
+                  <div class="mb-3">
+                    <p class="text-center">Silakan masuk menggunakan Username dan password SIMPEG bagi pegawai dan
+                      SIAKAD bagi mahasiswa</p>
+                    <p class="text-center">Username</p>
+                    <div class="col-9 input_login">
+                      <input type="text" class="form-control" placeholder="NIM/NIP" id="recipient-name">
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <p class="text-center">Password</p>
+                    <div class="col-9 input_login">
+                      <input type="text" class="form-control" placeholder="Masukkan Password" id="recipient-pw">
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer d-flex justify-content-center">
+                <button type="button" class="btn btn-modal">Masuk</button>
+                <button type="button" class="btn btn-pinang" data-bs-dismiss="modal">Batal</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- modal -->
       </div>
       <div class="col-5">
         <img src="Icon/1.png" class="img-fluid rounded float-end me-5 imghp" alt="...">
@@ -58,7 +133,8 @@
     <p>Analisis Perancangan Sistem Informasi R4 Kelompok 3 </p>
   </footer>
   <!-- Footer End -->
-  
+
   <script src="./bootstrap-5.3.0-alpha3-dist/js/bootstrap.bundle.js"></script>
 </body>
+
 </html>
