responsive daftar nama dosen dan profil dosen

--- a/beranda.html
+++ b/beranda.html
@@ -129,8 +129,8 @@
 
   <!-- Footer -->
   <footer>
-    <p class="pfoot">Copyright Tanya Dosen 2023</p>
-    <p>Analisis Perancangan Sistem Informasi R4 Kelompok 3 </p>
+    <p class="pfoot mt-2" style="margin-bottom: 0; color: #3D3D3D;">Copyright Tanya Dosen 2023</p>
+    <p style="margin-top: 0; color: #3D3D3D;">Analisis Perancangan Sistem Informasi R4 Kelompok 3 </p>
   </footer>
   <!-- Footer End -->
 
