--- a/daftarNamaDosen.html
+++ b/daftarNamaDosen.html
@@ -38,7 +38,7 @@
     <div class="container">
         <h1 class="text-center mt-5">Dosen Program Studi Sistem Informasi</h1>
         <div class="row g-2 mt-5">
-            <div class="col-6 mb-5 ">
+            <div class="col-lg-6 col-sm-12 mb-5 ">
                 <div class="p-3 border bg-white me-3 kolom">
                     <div class="row">
                         <div class="col">
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 col-sm-12">
                 <div class="p-3 border bg-white ms-3 kolom">
                     <div class="row">
                         <div class="col">
@@ -68,7 +68,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 mb-5">
+            <div class="col-lg-6 mb-5 col-sm-12">
                 <div class="p-3 border bg-white me-3 kolom">
                     <div class="row">
                         <div class="col">
@@ -83,7 +83,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 col-sm-12">
                 <div class="p-3 border bg-white ms-3 kolom">
                     <div class="row">
                         <div class="col">
@@ -98,7 +98,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 mb-5">
+            <div class="col-lg-6 mb-5 col-sm-12">
                 <div class="p-3 border bg-white me-3 kolom">
                     <div class="row">
                         <div class="col">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 col-sm-12">
                 <div class="p-3 border bg-white ms-3 kolom">
                     <div class="row">
                         <div class="col">
