--- a/profilDosen.html
+++ b/profilDosen.html
@@ -41,12 +41,11 @@
     <!-- container -->
     <div class="container">
         <h1 class="text-center mt-5">Dosen Program Studi Sistem Informasi</h1>
-
         <div class="row g-2 mt-5">
             <div class="col mb-5 ">
                 <div class="p-3 border bg-white me-3 kolom">
                     <div class="row">
-                        <div class="col">
+                        <div class="container col-sm-6 col-lg-4">
                             <img src="assets/image/pakdedi.jpg" class="" style="width: 350px; height: 350px;" alt="">
                             <h3 class="mt-3">Dedy Setiawan, S.Kom., M.IT.</h3>
                             <p class="nidn">NIDN: 0008078004 </p>
@@ -54,9 +53,9 @@
                             <button class="btn btn-primary btn-masuk button_kolom me-3 mt-1" type="submit">Tanya
                                 Sekarang</button>
                         </div>
-                        <div class="col me-4 mt-3">
 
-                            <div class="accordion" id="accordionPanelsStayOpenExample">
+                        <div class="container col-lg-8  mt-3">
+                            <div class="accordion mx-auto" id="accordionPanelsStayOpenExample">
                                 <div class="accordion-item">
                                     <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
