Mengupload project finish

--- a/daftarNamaDosen.html
+++ b/daftarNamaDosen.html
@@ -48,7 +48,7 @@
                             <h3 class="mt-3">Dedy Setiawan, S.Kom., M.IT.</h3>
                             <p class="nidn">NIDN: 0008078004 </p>
                             <p class="performa">Performa Chat: 97% (Hitungan Jam) </p>
-                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="profilDosen.html">Tanya Sekarang</a></button>
+                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="./tampilanChatMhs.html">Tanya Sekarang</a></button>
                         </div>
                     </div>
                 </div>
