--- a/tampilanChatMhs.html
+++ b/tampilanChatMhs.html
@@ -26,7 +26,7 @@
           <br>
           <span style="font-size: 14px;">Mahasiswa</span>
         </a>
-        <button class="btn btn-primary btn-masuk" type="submit">Keluar</button>
+        <a class="btn btn-primary btn-masuk" href="./beranda.html">Keluar</a>
       </div>
     </div>
   </nav>
@@ -40,11 +40,11 @@
             <div class="user-contact-list">
               <div class="row">
                 <div class="col-2">
-                  <img src="./assets/image/Frame 19.png" alt="">
+                  <img src="./assets/image/dediCircle.png" width="55px" alt="">
                 </div>
                 <div class="col">
-                  <span style="font-weight: bold;">Ronald Richards</span><br>
-                  <span>Lorem Ispansum</span>
+                  <span style="font-weight: bold;">Dedy Setiawan, S.Kom., M.IT.</span><br>
+                  <span>Dosen</span>
                 </div>
                 <div class="col-3">
                   <span>09.00</span>
@@ -57,14 +57,14 @@
             <div class="user-contact-list">
               <div class="row">
                 <div class="col-2">
-                  <img src="./assets/image/Frame 192.png" alt="">
+                  <img src="./assets/image/danielCircle.png" width="55px" alt="">
                 </div>
                 <div class="col">
-                  <span style="font-weight: bold;">Cameron Williamson</span><br>
-                  <span>Lorem Ispansum</span>
+                  <span style="font-weight: bold;">Daniel Arsa, S.Kom., M.S.I</span><br>
+                  <span>Dosen</span>
                 </div>
                 <div class="col-3">
-                  <span>09.00</span>
+                  <span>07.45</span>
                 </div>
               </div>
             </div>
@@ -74,14 +74,14 @@
             <div class="user-contact-list">
               <div class="row">
                 <div class="col-2">
-                  <img src="./assets/image/Frame 193.png" alt="">
+                  <img src="./assets/image/pakediCircle.png" width="55px" alt="">
                 </div>
                 <div class="col">
-                  <span style="font-weight: bold;">Darrell Steward</span><br>
-                  <span>Lorem Ispansum</span>
+                  <span style="font-weight: bold;">Edi Saputra, S.T., M.Sc.</span><br>
+                  <span>Dosen</span>
                 </div>
                 <div class="col-3">
-                  <span>09.00</span>
+                  <span>05.50</span>
                 </div>
               </div>
             </div>
@@ -97,10 +97,10 @@
       <div class="nama-tujuan">
         <div class="row">
           <div class="col-1">
-            <img src="./assets/image/Frame 19.png" alt="">
+            <img src="./assets/image/dediCircle.png" width="55px" alt="">
           </div>
           <div class="col" style="padding-left: 20px;">
-            <h4 style="margin: 0px;">Drs. Subedjo</h4>
+            <a href="./profilDosen.html" style="color: black; text-decoration: none;"><h4 style="margin: 0px;">Dedy Setiawan, S.Kom., M.IT.</h4></a>
             <p style="margin: 0px;">Dosen</p>
           </div>
         </div>
