--- a/beranda.html
+++ b/beranda.html
@@ -58,7 +58,7 @@
                     </form>
                   </div>
                   <div class="modal-footer d-flex justify-content-center">
-                    <button type="button" class="btn btn-modal">Masuk</button>
+                    <a class="btn btn-primary" href="./daftarNamaDosen.html">Masuk</a>
                     <button type="button" class="btn btn-pinang" data-bs-dismiss="modal">Batal</button>
                   </div>
                 </div>
@@ -81,9 +81,9 @@
           dosen. Penerapan sistem ini juga di harapkan untuk dapat meminimalisir adanya chat dari mahasiswa yang
           tertimbun karena banyaknya pesan yang masuk di WA dosen.</p>
         <!-- modal -->
-        <button type="button" class="btn btn-hp" data-bs-toggle="modal" data-bs-target="#exampleModal"
+        <button type="button" class="btn btn-hp" data-bs-toggle="modal" data-bs-target="#modalll"
           data-bs-whatever="@mdo">Masuk</button>
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="modalll" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
@@ -111,7 +111,7 @@
                 </form>
               </div>
               <div class="modal-footer d-flex justify-content-center">
-                <button type="button" class="btn btn-modal">Masuk</button>
+                <a href="./tampilanChatDsn.html" class="btn btn-primary">Masuk</a>
                 <button type="button" class="btn btn-pinang" data-bs-dismiss="modal">Batal</button>
               </div>
             </div>
