--- a/profilDosen.html
+++ b/profilDosen.html
@@ -173,7 +173,7 @@
                                     <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                                         aria-labelledby="panelsStayOpen-headingTwo">
                                         <div class="accordion-body">
-                                            <table style="width: 800px;">
+                                            <table style="width: 800px;" class="container col-sm-3">
                                                 <tr>
                                                     <td style="width: 40px;"><b>No</b></td>
                                                     <td style="width: 85px;"><b>Jenjang </b></td>
