--- a/profilDosen.html
+++ b/profilDosen.html
@@ -50,7 +50,9 @@
                             <h3 class="mt-3">Dedy Setiawan, S.Kom., M.IT.</h3>
                             <p class="nidn">NIDN: 0008078004 </p>
                             <p class="performa">Performa Chat: 97% (Hitungan Jam) </p>
-                            <a href="./tampilanChatMhs.html" class="d-flex btn btn-primary">Tanya Sekarang</a>
+                            <div class="tengah">
+                                <a href="./tampilanChatMhs.html" class="w-100 btn btn-primary">Tanya Sekarang</a>
+                            </div>
                             
                         </div>
 
