Menambahkan isi beranda

--- a/beranda.html
+++ b/beranda.html
@@ -123,6 +123,17 @@
         <img src="Icon/1.png" class="img-fluid rounded float-end me-5 imghp" alt="...">
       </div>
     </div>
+    <div class="row">
+      <div class="col-6">
+        <img src="assets/image/5.png" class="img-fluid rounded float-end me-5 imghp" alt="...">
+      </div>
+      <div class="col-5">
+        <p class="judul1hp">Kelebihan Tanya Dosen</p>
+        <p class="isi1hp">Tampilan yang mudah dipahami
+          Tersedianya template chat yang sopan
+          Bisa melihat status dosen apakah sedang sibuk atau tidak</p>
+      </div>
+    </div>
 
   </div>
   <!-- Homepage End -->
