menambahkan vektor dan mengubah type password

--- a/beranda.html
+++ b/beranda.html
@@ -52,7 +52,7 @@
                       <div class="mb-3">
                         <p class="text-center">Password</p>
                         <div class="col-9 input_login">
-                          <input type="text" class="form-control" placeholder="Masukkan Password" id="recipient-pw">
+                          <input type="password" class="form-control" placeholder="Masukkan Password" id="recipient-pw">
                         </div>
                       </div>
                     </form>
@@ -75,6 +75,9 @@
   <!-- Homepage -->
   <div class="homepage">
     <div class="row">
+      <div class="col">
+        <img src="assets/image/Vector 7 (1).png" alt="">
+      </div>
       <div class="col-6">
         <p class="judulhp"><span style="color:#FB0303;">T</span>ANYA DOSEN</p>
         <p class="isihp">Tanya dosen merupakan sebuah sistem yang dapat memudahkan mahasiswa untuk berkomunikasi dengan
@@ -105,7 +108,7 @@
                   <div class="mb-3">
                     <p class="text-center">Password</p>
                     <div class="col-9 input_login">
-                      <input type="text" class="form-control" placeholder="Masukkan Password" id="recipient-pw">
+                      <input type="password" class="form-control" placeholder="Masukkan Password" id="recipient-pw">
                     </div>
                   </div>
                 </form>
@@ -120,18 +123,22 @@
         <!-- modal -->
       </div>
       <div class="col-5">
-        <img src="Icon/1.png" class="img-fluid rounded float-end me-5 imghp" alt="...">
+        <img src="Icon/1.png" class="img-fluid rounded ms-5 imghp" alt="...">
       </div>
     </div>
+
     <div class="row">
-      <div class="col-6">
-        <img src="assets/image/5.png" class="img-fluid rounded float-end me-5 imghp" alt="...">
+      <div class="col-5">
+        <img src="assets/image/5.png"  class="img-fluid rounded float-end me-5 imghp"  alt="...">
       </div>
       <div class="col-5">
-        <p class="judul1hp">Kelebihan Tanya Dosen</p>
+      <p class="judul1hp">Kelebihan Tanya Dosen</p>
         <p class="isi1hp">Tampilan yang mudah dipahami
-          Tersedianya template chat yang sopan
-          Bisa melihat status dosen apakah sedang sibuk atau tidak</p>
+          tersedianya template chat yang sopan
+          bisa melihat status dosen apakah sedang sibuk atau tidak</p>
+      </div>
+      <div class="col">
+        <img src="assets/image/Vector 7.png" class="float-end vector" alt="">
       </div>
     </div>
 
