--- a/daftarNamaDosen.html
+++ b/daftarNamaDosen.html
@@ -63,7 +63,7 @@
                             <h3 class="mt-3">Ir. Indra Weni, M.Kom.</h3>
                             <p class="nidn">NIDN: 0027106804</p>
                             <p class="performa">Performa Chat: 97% (Hitungan Jam) </p>
-                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="profilDosen.html">Tanya Sekarang</a></button>
+                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="profilDosenIndra.html">Tanya Sekarang</a></button>
                         </div>
                     </div>
                 </div>
