--- a/beranda.html
+++ b/beranda.html
@@ -46,7 +46,7 @@
                           SIAKAD bagi mahasiswa</p>
                         <p class="text-center">Username</p>
                         <div class="col-9 input_login">
-                          <input type="text" class="form-control" placeholder="NIM/NIP" id="recipient-name">
+                          <input type="text" class="form-control" placeholder="NIM/NIDN" id="recipient-name">
                         </div>
                       </div>
                       <div class="mb-3">
@@ -102,7 +102,7 @@
                       SIAKAD bagi mahasiswa</p>
                     <p class="text-center">Username</p>
                     <div class="col-9 input_login">
-                      <input type="text" class="form-control" placeholder="NIM/NIP" id="recipient-name">
+                      <input id="username-dosen" type="text" class="form-control" placeholder="NIM/NIDN" id="recipient-name">
                     </div>
                   </div>
                   <div class="mb-3">
@@ -114,7 +114,7 @@
                 </form>
               </div>
               <div class="modal-footer d-flex justify-content-center">
-                <a href="./tampilanChatDsn.html" class="btn btn-primary">Masuk</a>
+                <a id="link-dsn" href="#" class="btn btn-primary">Masuk</a>
                 <button type="button" class="btn btn-pinang" data-bs-dismiss="modal">Batal</button>
               </div>
             </div>
@@ -152,6 +152,23 @@
   </footer>
   <!-- Footer End -->
 
+  <script>
+    window.onload = () => {
+      const linkDsn = document.getElementById("link-dsn");
+      const usernameDosen = document.getElementById('username-dosen')
+      linkDsn.addEventListener('click', function(){
+        if (usernameDosen.value == "0008078004"){
+          linkDsn.href = "./tampilanChatDsn.html";
+        } else 
+        if (usernameDosen.value == "0029068909"){
+          linkDsn.href = "./tampilanChatDsnDaniel.html";
+        } else {
+          linkDsn.href = "./tampilanChatDsnEdi.html";
+        }
+
+      })
+    }
+  </script>
   <script src="./bootstrap-5.3.0-alpha3-dist/js/bootstrap.bundle.js"></script>
 </body>
 
