--- a/daftarNamaDosen.html
+++ b/daftarNamaDosen.html
@@ -48,7 +48,7 @@
                             <h3 class="mt-3">Dedy Setiawan, S.Kom., M.IT.</h3>
                             <p class="nidn">NIDN: 0008078004 </p>
                             <p class="performa">Performa Chat: 97% (Hitungan Jam) </p>
-                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="./profilDosen.html">Tanya Sekarang</a></button>
+                            <a href="./profilDosen.html" class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit">Tanya Sekarang</a>
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                             <h3 class="mt-3">Ir. Indra Weni, M.Kom.</h3>
                             <p class="nidn">NIDN: 0027106804</p>
                             <p class="performa">Performa Chat: 97% (Hitungan Jam) </p>
-                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="profilDosen.html">Tanya Sekarang</a></button>
+                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="profilDosenIndra.html">Tanya Sekarang</a></button>
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                             <h3 class="mt-3">Mutia Fadhila Putri, M.Kom.</h3>
                             <p class="nidn">NIDN: 0016129602</p>
                             <p class="performa">Performa Chat: 97% (Hitungan Jam) </p>
-                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="profilDosen.html">Tanya Sekarang</a></button>
+                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="profilDosenMutia.html">Tanya Sekarang</a></button>
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                             <h3 class="mt-3">Reni Aryani, S.Kom., M.S.I.</h3>
                             <p class="nidn">NIDN: 0022018801</p>
                             <p class="performa">Performa Chat: 97% (Hitungan Jam) </p>
-                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="profilDosen.html">Tanya Sekarang</a></button>
+                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="profilDosenReni.html">Tanya Sekarang</a></button>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                             <h3 class="mt-3">Daniel Arsa, S.Kom., M.S.I</h3>
                             <p class="nidn">NIDN: 0029068909</p>
                             <p class="performa">Performa Chat: 97% (Hitungan Jam) </p>
-                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="profilDosen.html">Tanya Sekarang</a></button>
+                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="profilDosenDaniel.html">Tanya Sekarang</a></button>
                         </div>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                             <h3 class="mt-3">Edi Saputra, S.T., M.Sc.</h3>
                             <p class="nidn">NIDN: 0008018505</p>
                             <p class="performa">Performa Chat: 97% (Hitungan Jam) </p>
-                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="profilDosen.html">Tanya Sekarang</a></button>
+                            <button class="btn btn-primary btn-masuk button_kolom me-3 mt-4" type="submit"><a href="profilDosenEdi.html">Tanya Sekarang</a></button>
                         </div>
                     </div>
                 </div>
