--- a/tampilanChatMhsEdi.html
+++ b/tampilanChatMhsEdi.html
@@ -103,10 +103,10 @@
         <div class="nama-tujuan">
           <div class="row">
             <div class="col-1">
-              <img src="./assets/image/dediCircle.png" width="55px" alt="">
+              <img src="./assets/image/pakediCircle.png" width="55px" alt="">
             </div>
             <div class="col" style="padding-left: 20px;">
-              <a href="./profilDosen.html" style="color: black; text-decoration: none;"><h4 style="margin: 0px;">Dedy Setiawan, S.Kom., M.IT.</h4></a>
+              <a href="./profilDosen.html" style="color: black; text-decoration: none;"><h4 style="margin: 0px;">Edi Saputra, S.T., M.Sc.</h4></a>
               <p style="margin: 0px;">Dosen</p>
             </div>
           </div>
@@ -246,6 +246,6 @@
   </div>
 
   <script src="./bootstrap-5.3.0-alpha3-dist/js/bootstrap.bundle.js"></script>
-  <script src="./assets/js/app.js"></script>
+  <script src="./assets/js/app4.js"></script>
 </body>
 </html>
