--- a/tampilanChatDsnDaniel.html
+++ b/tampilanChatDsnDaniel.html
@@ -26,7 +26,7 @@
           <br>
           <span style="font-size: 14px;">Dosen</span>
         </a>
-        <a href="./beranda.html" class="btn btn-primary btn-masuk">Keluar</a>
+        <a href="./index.html" class="btn btn-primary btn-masuk">Keluar</a>
         
       </div>
     </div>
