--- a/tampilanChatMhsEdi.html
+++ b/tampilanChatMhsEdi.html
@@ -26,7 +26,7 @@
           <br>
           <span style="font-size: 14px;">Mahasiswa</span>
         </a>
-        <a class="btn btn-primary btn-masuk" href="./beranda.html">Keluar</a>
+        <a class="btn btn-primary btn-masuk" href="./index.html">Keluar</a>
       </div>
     </div>
   </nav>
